--- a/services.html
+++ b/services.html
@@ -5,35 +5,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Услуги проектирования инженерных систем — ОВ, ВК, ЭОМ в Revit</title>
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://cdnjs.cloudflare.com">
+    <link rel="preconnect" href="https://cdn.tailwindcss.com">
+    
+    <!-- Preload critical assets -->
+    <link rel="preload" href="https://cdn.tailwindcss.com" as="script">
+    <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" as="style">
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" as="style">
+
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap">
+
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap');
+        /* Fallback font metrics to reduce CLS */
+        @font-face {
+          font-family: 'Inter Fallback';
+          src: local('Arial');
+          ascent-override: 92.77%;
+          descent-override: 24.41%;
+          line-gap-override: 0.00%;
+          size-adjust: 107.80%;
+        }
         :root { --brand-orange: #fc670c; --brand-dark: #111827; --text-main: #374151; }
-        body { font-family: 'Inter', sans-serif; color: var(--text-main); }
-        .logo-font { font-family: 'Inter', sans-serif; font-weight: 900; }
+        body { font-family: 'Inter', 'Inter Fallback', sans-serif; color: var(--text-main); }
+        .logo-font { font-family: 'Inter', 'Inter Fallback', sans-serif; font-weight: 900; }
         .bg-grid { background-image: radial-gradient(#e5e7eb 1px, transparent 1px); background-size: 40px 40px; }
         h1, h2, h3 { color: var(--brand-dark); font-weight: 800; text-transform: uppercase; }
         .cta-button { background-color: var(--brand-orange); color: #FFFFFF; }
     </style>
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "BreadcrumbList",
+      "itemListElement": [{
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Главная",
+        "item": "https://pknpro5-ops.github.io/index.html"
+      },{
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Системы"
+      }]
+    }
+    </script>
 </head>
 <body class="bg-white">
     <!-- Header -->
-    <header class="bg-[#111827] border-b border-white/5 py-4">
+    <header class="sticky top-0 z-50 bg-[#111827] border-b border-white/5 py-4 backdrop-blur-lg">
         <div class="container mx-auto px-4 flex justify-between items-center">
             <a href="index.html" class="logo-font text-3xl"><span class="text-[#fc670c]">HOT</span><span class="text-white">PLAN</span></a>
-            <nav class="hidden md:flex gap-8 text-[10px] font-black uppercase tracking-widest text-white/70">
-                <a href="services.html" class="text-white">Услуги</a>
+            <nav role="navigation" aria-label="Основная навигация сайта" class="hidden xl:flex gap-6 text-[9px] font-black uppercase tracking-[0.2em] text-white/70">
+                <a href="services.html" class="text-white">Системы</a>
+                <a href="restorany.html" class="hover:text-[#fc670c]">Рестораны</a>
+                <a href="ofisy.html" class="hover:text-[#fc670c]">Офисы</a>
+                <a href="kvartiry.html" class="hover:text-[#fc670c]">Квартиры</a>
                 <a href="portfolio.html" class="hover:text-[#fc670c]">Кейсы</a>
-                <a href="about.html" class="hover:text-[#fc670c]">О бюро</a>
-                <a href="contacts.html" class="hover:text-[#fc670c]">Контакты</a>
+                <a href="prices.html" class="hover:text-[#fc670c]">Цены</a>
+                <a href="sro.html" class="hover:text-[#fc670c]">СРО</a>
             </nav>
-            <a href="tel:+74950000000" class="hidden lg:block text-sm font-black text-white">+7 (495) 000-00-00</a>
+            <div class="hidden lg:flex items-center gap-6">
+                <a href="tel:+74950000000" class="text-sm font-black text-white">+7 (495) 000-00-00</a>
+                <a href="#quiz" class="cta-button px-6 py-3 text-[10px] font-black uppercase rounded-lg">КП за 30 мин</a>
+            </div>
         </div>
     </header>
 
     <main>
-        <section class="py-24 bg-slate-50 bg-grid border-b border-slate-100">
+        <section class="py-24 bg-slate-50 bg-grid border-b border-slate-100" aria-label="Наши компетенции">
             <div class="container mx-auto px-4">
                 <h1 class="text-5xl md:text-8xl mb-8 leading-none tracking-tighter">Наши <br><span class="text-[#fc670c]">компетенции</span></h1>
                 <p class="text-xl text-slate-500 max-w-2xl font-medium">Разработка проектной и рабочей документации (стадии П и Р) согласно Постановлению №87 РФ.</p>
@@ -41,72 +84,72 @@
         </section>
 
         <!-- Service Sections -->
-        <section class="py-32">
+        <section class="py-32" aria-label="Описание услуг">
             <div class="container mx-auto px-4 space-y-32">
                 <!-- Vent -->
-                <div class="grid lg:grid-cols-2 gap-20 items-start">
+                <article class="grid lg:grid-cols-2 gap-20 items-start" aria-labelledby="vent-service">
                     <div class="space-y-8">
                         <div class="w-20 h-20 bg-orange-50 rounded-3xl flex items-center justify-center text-[#fc670c] text-3xl">
-                            <i class="fas fa-wind"></i>
+                            <i class="fas fa-wind" aria-hidden="true"></i>
                         </div>
-                        <h2 class="text-4xl">Вентиляция и Кондиционирование (ОВ)</h2>
+                        <h2 id="vent-service" class="text-4xl">Вентиляция и Кондиционирование (ОВ)</h2>
                         <p class="text-lg leading-relaxed">Проектирование систем приточно-вытяжной вентиляции, аспирации и противодымной защиты. Соблюдаем нормы СП 60.13330.2020 и СанПиН 2.1.3678-20.</p>
                         <ul class="grid md:grid-cols-2 gap-4 text-xs font-black uppercase tracking-widest text-slate-400">
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Аэродинамический расчет</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Подбор оборудования</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Акустический расчет</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Интеграция в BIM</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Аэродинамический расчет</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Подбор оборудования</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Акустический расчет</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Интеграция в BIM</li>
                         </ul>
                     </div>
                     <div class="bg-slate-100 rounded-[40px] aspect-video overflow-hidden border border-slate-200">
-                        <img src="https://images.unsplash.com/photo-1581094288338-2314dddb7ecc?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale" alt="Проект вентиляции">
+                        <img src="https://images.unsplash.com/photo-1581094288338-2314dddb7ecc?auto=format&fit=crop&q=75&w=800&fm=webp" class="w-full h-full object-cover grayscale" alt="Проект вентиляции" loading="lazy" width="800" height="450">
                     </div>
-                </div>
+                </article>
 
                 <!-- Water -->
-                <div class="grid lg:grid-cols-2 gap-20 items-start">
+                <article class="grid lg:grid-cols-2 gap-20 items-start" aria-labelledby="water-service">
                     <div class="lg:order-2 space-y-8">
                         <div class="w-20 h-20 bg-blue-50 rounded-3xl flex items-center justify-center text-blue-600 text-3xl">
-                            <i class="fas fa-tint"></i>
+                            <i class="fas fa-tint" aria-hidden="true"></i>
                         </div>
-                        <h2 class="text-4xl">Водопровод и Канализация (ВК)</h2>
+                        <h2 id="water-service" class="text-4xl">Водопровод и Канализация (ВК)</h2>
                         <p class="text-lg leading-relaxed">Разработка внутренних систем ХВС, ГВС и водоотведения. Проектируем системы очистки жиросодержащих стоков для общепита.</p>
                         <ul class="grid md:grid-cols-2 gap-4 text-xs font-black uppercase tracking-widest text-slate-400">
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Баланс водопотребления</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Гидравлика трубопроводов</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Жироуловители</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Ливневые стоки (К2)</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Баланс водопотребления</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Гидравлика трубопроводов</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Жироуловители</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Ливневые стоки (К2)</li>
                         </ul>
                     </div>
                     <div class="bg-slate-100 rounded-[40px] aspect-video overflow-hidden border border-slate-200 lg:order-1">
-                         <img src="https://images.unsplash.com/photo-1542332213-9b5a5a3fab35?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale" alt="Проект водоснабжения">
+                         <img src="https://images.unsplash.com/photo-1542332213-9b5a5a3fab35?auto=format&fit=crop&q=75&w=800&fm=webp" class="w-full h-full object-cover grayscale" alt="Проект водоснабжения" loading="lazy" width="800" height="450">
                     </div>
-                </div>
+                </article>
 
                 <!-- Electric -->
-                <div class="grid lg:grid-cols-2 gap-20 items-start">
+                <article class="grid lg:grid-cols-2 gap-20 items-start" aria-labelledby="electric-service">
                     <div class="space-y-8">
                         <div class="w-20 h-20 bg-yellow-50 rounded-3xl flex items-center justify-center text-yellow-600 text-3xl">
-                            <i class="fas fa-bolt"></i>
+                            <i class="fas fa-bolt" aria-hidden="true"></i>
                         </div>
-                        <h2 class="text-4xl">Электроснабжение (ЭОМ)</h2>
+                        <h2 id="electric-service" class="text-4xl">Электроснабжение (ЭОМ)</h2>
                         <p class="text-lg leading-relaxed">Разработка разделов электроосвещения и силового оборудования. Обеспечение надежности 1-й и 2-й категории электроснабжения.</p>
                         <ul class="grid md:grid-cols-2 gap-4 text-xs font-black uppercase tracking-widest text-slate-400">
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Однолинейные схемы</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Расчет нагрузок</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Молниезащита</li>
-                            <li><i class="fas fa-check text-green-500 mr-2"></i> Заземление</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Однолинейные схемы</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Расчет нагрузок</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Молниезащита</li>
+                            <li><i class="fas fa-check text-green-500 mr-2" aria-hidden="true"></i> Заземление</li>
                         </ul>
                     </div>
                     <div class="bg-slate-100 rounded-[40px] aspect-video overflow-hidden border border-slate-200">
-                         <img src="https://images.unsplash.com/photo-1454165833767-027ffea9e778?auto=format&fit=crop&q=80&w=800" class="w-full h-full object-cover grayscale" alt="Проект электрики">
+                         <img src="https://images.unsplash.com/photo-1454165833767-027ffea9e778?auto=format&fit=crop&q=75&w=800&fm=webp" class="w-full h-full object-cover grayscale" alt="Проект электрики" loading="lazy" width="800" height="450">
                     </div>
-                </div>
+                </article>
             </div>
         </section>
 
         <!-- CTA Quiz -->
-        <section id="quiz" class="py-32 bg-[#111827] text-white">
+        <section id="quiz" class="py-32 bg-[#111827] text-white" aria-label="Расчет стоимости проекта">
             <div class="container mx-auto px-4 grid lg:grid-cols-2 gap-24 items-center">
                 <div class="space-y-8">
                     <h2 class="text-4xl text-white">Получите КП на ваш объект</h2>
@@ -117,10 +160,42 @@
         </section>
     </main>
 
-    <footer class="bg-[#111827] text-white py-12 border-t border-white/5">
-        <div class="container mx-auto px-4 text-center">
-            <div class="logo-font text-2xl mb-6"><span class="text-[#fc670c]">HOT</span><span>PLAN</span></div>
-            <p class="text-[9px] font-black uppercase tracking-widest text-slate-600">© 2024 HOTPLAN. СРО № П.035.77.1234</p>
+    <footer class="bg-[#111827] text-white pt-24 pb-12">
+        <div class="container mx-auto px-4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-16">
+            <div>
+                <a href="index.html" class="logo-font text-3xl mb-6 block"><span class="text-[#fc670c]">HOT</span><span class="text-white">PLAN</span></a>
+                <p class="text-slate-400 text-xs">Проектируем инженерные сети для бизнеса и частных лиц в Москве с 2012 года. BIM-моделирование как стандарт качества.</p>
+            </div>
+            <div>
+                <h4 class="font-black text-[10px] uppercase tracking-[0.3em] mb-8 text-[#fc670c]">Навигация</h4>
+                <ul class="space-y-4 text-sm text-slate-300">
+                    <li><a href="services.html" class="hover:text-white">Системы</a></li>
+                    <li><a href="portfolio.html" class="hover:text-white">Кейсы</a></li>
+                    <li><a href="prices.html" class="hover:text-white">Цены</a></li>
+                    <li><a href="about.html" class="hover:text-white">О бюро</a></li>
+                    <li><a href="sro.html" class="hover:text-white">СРО</a></li>
+                    <li><a href="contacts.html" class="hover:text-white">Контакты</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-black text-[10px] uppercase tracking-[0.3em] mb-8 text-[#fc670c]">Объекты</h4>
+                <ul class="space-y-4 text-sm text-slate-300">
+                    <li><a href="restorany.html" class="hover:text-white">Рестораны</a></li>
+                    <li><a href="ofisy.html" class="hover:text-white">Офисы</a></li>
+                    <li><a href="kvartiry.html" class="hover:text-white">Квартиры и дома</a></li>
+                </ul>
+            </div>
+            <div>
+                <h4 class="font-black text-[10px] uppercase tracking-[0.3em] mb-8 text-[#fc670c]">Контакты</h4>
+                <address class="not-italic space-y-4 text-sm text-slate-300">
+                    <p><i class="fas fa-map-marker-alt text-[#fc670c] mr-3" aria-hidden="true"></i>Москва, Саввинская наб. 15</p>
+                    <p><i class="fas fa-phone text-[#fc670c] mr-3" aria-hidden="true"></i><a href="tel:+74950000000" class="hover:text-white">+7 (495) 000-00-00</a></p>
+                    <p><i class="fas fa-envelope text-[#fc670c] mr-3" aria-hidden="true"></i><a href="mailto:info@hot-plan.ru" class="hover:text-white">info@hot-plan.ru</a></p>
+                </address>
+            </div>
+        </div>
+        <div class="container mx-auto px-4 mt-16 pt-8 border-t border-white/10 text-center text-xs text-slate-500">
+            <p>© 2024 HOTPLAN. Все права защищены. <a href="#" class="hover:text-white">Политика конфиденциальности</a>.</p>
         </div>
     </footer>
 
